feat: Adding auto acceptation of games for admin + updating swagger
